# figquilt

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: design.md  plan.md  publishing.md  spec.md  user_testing.md
examples/: custom_labels.yaml  fit_modes.yaml  grid_layout.json  manual_test.yaml  manual_test_2.yaml  nested_grid.yaml  simple_grid.yaml
schema/: layout.schema.json
scripts/: generate_assets.py
src/figquilt/: __init__.py  base_composer.py  cli.py  compose_pdf.py  compose_svg.py  errors.py  grid.py  images.py  layout.py  parser.py  units.py
tests/: conftest.py  test_base_composer.py  test_cli.py  test_cli_resource_cleanup.py  test_examples.py  test_fit_modes.py  test_grid.py  test_images.py  test_layout.py  test_mixed.py  test_package_init.py  test_parser_asset_validation.py  test_pdf.py  test_realistic_figure.py  test_schema.py
